# simple-agentcore

./: .gitignore  CLAUDE.md  README.md  deploy_agent.py  deploy_mcp_server.py  pyproject.toml  requirements.txt
.claude/skills/deploy-agentcore/: SKILL.md
.claude/skills/generate-agent-card/: SKILL.md
.claude/skills/generate-server-card/: SKILL.md
openapi-specs/: geolocation_openapi.json
simple-a2a-agent/: a2a_agent_entrypoint.py  client.py  deploy_a2a_agent.py  requirements.txt
simple-agent/: .env.example  agent_entrypoint.py  deploy_agent.py  requirements.txt  simple_calculator_agent_card.json
simple-mcp/: deploy_mcp_server.py  geo_mcp_server_card.json  get_token.sh  requirements.txt
simple-mcp/openapi-specs/: geolocation_openapi.json
